--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success bg-gradient">
   <div class="container-fluid">
-    <a th:href="@{/ebooks}" class="navbar-brand text-white">EBOOKSTORE</a>
+    <a th:href="@{/ebookstore}" class="navbar-brand text-white">EBOOKSTORE</a>
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -29,17 +29,21 @@
           </li>
 
       </ul>
-      <form th:action="@{/login}" method="post">
-          <div class="mb-3">
+      <form th:action="@{/login}" method="post"  class="row gy-2 gx-3 align-items-center">
+
+
+          <div class="col-auto">
               <label for="username" class="form-label">Username</label>
               <input id="username" type="text" class="form-control" name="username">
           </div>
 
-          <div class="mb-3">
+          <div class="col-auto">
               <label for="password" class="form-label">Password</label>
               <input id="password" type="password" class="form-control" name="password">
           </div>
-          <button type="submit" style="width: 100%" class="btn btn-primary">Login</button>
+          <div class="col-auto">
+          <button type="submit" style="width: 100%" class="btn btn-primary inline">Login</button>
+          </div>
       </form>
 
       <a th:href="@{/cart}" class="btn btn-outline-light" type="submit">Cart
