--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -21,7 +21,7 @@
 
                 </div>
             <div class="col-3">
-                <a th:href="@{/admin/purchases}"  style="width: 100%;" class="btn btn-success mb-3">Show purchases</a>
+                <a th:href="@{/admin/orders}"  style="width: 100%;" class="btn btn-success mb-3">Show purchases</a>
             </div>
             <div class="col-3">
                 <a th:href="@{/admin/ebooks-list}"  style="width: 100%;" class="btn btn-success mb-3">Show ebooks</a>
