--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -18,7 +18,7 @@
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/ebooks}">Home</a>
+          <a class="nav-link active" aria-current="page" th:href="@{/ebookstore}">Home</a>
         </li>
 
         <li class="nav-item">
