Order's list page and details view implemented.

--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -38,7 +38,7 @@
             <td><span th:text="${order.user.email}"> email </span></td>
             <td><span th:text="${order.totalCost}"> cost </span></td>
             <td><span th:text="${order.orderTime}"> date </span></td>
-            <td><a th:href="@{order/__${order.id}__}"  style="width: 100%;" class="btn btn-primary mb-3">Details</a></td>
+            <td><a th:href="@{orders/__${order.id}__}"  style="width: 100%;" class="btn btn-primary mb-3">Details</a></td>
         </tr>
         </th:block>
         </tbody>
