--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Administration panel</title>
+    <title>EBOOKSTORE - Administration panel</title>
     <link th:href="@{/bootstrap.css}" rel="stylesheet">
     <link th:href="@{/style.css}" rel="stylesheet">
 
@@ -17,14 +17,14 @@
 
         <div class="row">
                 <div class="col-3">
-                    <a th:href="@{/admin/add-view}"  style="width: 100%;" class="btn btn-success mb-3">Add ebook</a>
+                    <a th:href="@{/admin/ebooks/add-view}"  style="width: 100%;" class="btn btn-success mb-3">Add ebook</a>
 
                 </div>
             <div class="col-3">
                 <a th:href="@{/admin/orders}"  style="width: 100%;" class="btn btn-success mb-3">Show purchases</a>
             </div>
             <div class="col-3">
-                <a th:href="@{/admin/ebooks-list}"  style="width: 100%;" class="btn btn-success mb-3">Show ebooks</a>
+                <a th:href="@{/admin/ebooks}"  style="width: 100%;" class="btn btn-success mb-3">Show ebooks</a>
             </div>
         </div>
 </div>
