--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div th:insert="fragments/nav-bar::nav"></div>
+<div th:insert="~{fragments/nav-bar::nav}"></div>
 
 <div class="container" style="margin-top:100px;">
 
