--- a/src/main/resources/templates/admin/order-details.html
+++ b/src/main/resources/templates/admin/order-details.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<div th:insert="fragments/nav-bar::nav"></div>
+<div th:insert="~{fragments/nav-bar::nav}"></div>
 
 <div class="container" style="margin-top:100px;">
   <h2>Details of order no: <span th:text="${orderById.getId()}"></span></h2>
