delete unordered ebook implemented

--- a/src/main/resources/templates/admin/ebooks.html
+++ b/src/main/resources/templates/admin/ebooks.html
@@ -36,10 +36,10 @@
                 <td >
 
                     <div>
-                        <a th:href="@{/admin/ebooks/edit-view/__${ebook.id}__}"  style="width: 100%;" class="btn btn-success mb-3">Edit TODO</a>
+                        <a th:href="@{/admin/ebooks/edit-view/__${ebook.id}__}"  style="width: 100%;" class="btn btn-success mb-3">Edit</a>
                     </div>
                     <div>
-                        <a th:href="@{/cos/}"  style="width: 100%;" class="btn btn-success mb-3">Delete TODO</a>
+                        <a th:href="@{/admin/ebooks/delete/__${ebook.id}__}"  style="width: 100%;" class="btn btn-success mb-3">Delete TODO</a>
                     </div>
 
                 </td>
