--- a/src/main/resources/templates/admin/edit-ebook.html
+++ b/src/main/resources/templates/admin/edit-ebook.html
@@ -62,7 +62,10 @@
                     <option th:each="genreSelected : ${genres}" th:text="${genreSelected}" th:value="${genreSelected}">
                 </select>
             </div>
-
+            <div class="mb-3">
+                <label for="available" class="form-label">Available in store right now?</label>
+                <input type="checkbox"  th:field="${editedEbook.available}" id="available" />
+            </div>
 
             <div class="mb-3">
                 <input type="file" class="form-control" name="cover" accept="image/*"/>
@@ -72,7 +75,7 @@
     </div>
 
 </div>
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
