Shopping cart implemented

--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -46,7 +46,7 @@
           </div>
       </form>
 
-      <a th:href="@{/cart}" class="btn btn-outline-light" type="submit">Cart
+      <a th:href="@{/ebookstore/cart}" class="btn btn-outline-light" type="submit">Cart
         <span class = "badge" th:text="${cartSize}"></span>
       </a>
     </div>
