--- a/src/main/resources/templates/main/ebook-details.html
+++ b/src/main/resources/templates/main/ebook-details.html
@@ -49,7 +49,7 @@
                 </tr>
 
 
-                <form th:action="@{/cart/add}" method="post">
+                <form th:action="@{/ebookstore/cart/add}" method="post">
                     <input type="hidden" name = "ebookId" th:value="${ebookById.id}"/>
 
                     <button type="submit" style="width: 100%;" class="btn btn-primary mb-3">Add to cart</button>
