--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -35,7 +35,7 @@
         <th:block th:each="order: ${orders}">
         <tr>
             <td><span th:text="${order.id}"> id </span></td>
-            <td><span th:text="${order.userdto.email}"> email </span></td>
+            <td><span th:text="${order.user.email}"> email </span></td>
             <td><span th:text="${order.totalCost}"> cost </span></td>
             <td><span th:text="${order.orderTime}"> date </span></td>
             <td><a th:href="@{orders/__${order.id}__}"  style="width: 100%;" class="btn btn-primary mb-3">Details</a></td>
