--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -22,7 +22,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/customer/register}">Register</a>
+          <a class="nav-link active" aria-current="page" th:href="@{/ebookstore/register}">Register</a>
         </li>
           <li class="nav-item">
               <a class="nav-link active" aria-current="page" th:href="@{/admin}">Admin's panel</a>
