mapper fixed, dtos refactored

--- a/src/main/resources/templates/admin/order-details.html
+++ b/src/main/resources/templates/admin/order-details.html
@@ -1,74 +1,66 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>Administration panel</title>
-  <link th:href="@{/bootstrap.css}" rel="stylesheet">
-  <link th:href="@{/style.css}" rel="stylesheet">
+    <title>Administration panel</title>
+    <link th:href="@{/bootstrap.css}" rel="stylesheet">
+    <link th:href="@{/style.css}" rel="stylesheet">
 
 </head>
 <body>
 <div th:insert="~{fragments/nav-bar::nav}"></div>
 
 <div class="container" style="margin-top:100px;">
-  <h2>Details of order no: <span th:text="${orderById.getId()}"></span></h2>
+    <h2>Details of order no: <span th:text="${orderById.getId()}"></span></h2>
 
-  <table class="table">
-    <tr>
-      <td >Email:</td>
-      <td th:text="${orderById.getUser().getEmail()}"></td>
-    </tr>
-
-    <tr>
-      <td >Address:</td>
-      <td th:text="${orderById.getUser().getAddress()}"></td>
-    </tr>
+    <table class="table">
+        <tr>
+            <td>Email:</td>
+            <td th:text="${orderById.getUserEmail()}"></td>
+        </tr>
 
 
-    <tr>
-      <td >Total cost:</td>
-      <td th:text="${orderById.getTotalCost()}"></td>
-    </tr>
-    <tr>
-      <td >Purchase date:</td>
-      <td th:text="${orderById.getOrderTime()}"></td>
-    </tr>
+        <tr>
+            <td>Total cost:</td>
+            <td th:text="${orderById.getTotalCost()}"></td>
+        </tr>
+        <tr>
+            <td>Purchase date:</td>
+            <td th:text="${orderById.getOrderTime()}"></td>
+        </tr>
 
 
+    </table>
+    <h3> List of purchased ebooks:</h3>
 
-  </table>
-  <h3> List of purchased ebooks:</h3>
+    <table th:each="ebook : ${orderedEbooks}">
+        <tr>
+            <td>Id:</td>
+            <td th:text="${ebook.id}"></td>
 
-  <table th:each="ebook : ${orderedEbooks}">
-    <tr>
-      <td>Id:</td>
-      <td th:text="${ebook.id}"></td>
-
-    </tr>
-    <tr>
-      <td>Title:</td>
-      <td th:text="${ebook.title}"></td>
-    </tr>
-    <tr>
-      <td>Selling price:</td>
-      <td th:text="${ebook.sellingPrice}"></td>
-    </tr>
-    <tr>
-      <td>Purchase cost:</td>
-      <td th:text="${ebook.purchaseCost}"></td>
-    </tr>
-    <hr>
-  </table>
-
+        </tr>
+        <tr>
+            <td>Title:</td>
+            <td th:text="${ebook.title}"></td>
+        </tr>
+        <tr>
+            <td>Selling price:</td>
+            <td th:text="${ebook.sellingPrice}"></td>
+        </tr>
+        <tr>
+            <td>Purchase cost:</td>
+            <td th:text="${ebook.purchaseCost}"></td>
+        </tr>
+        <hr>
+    </table>
 
 
-  <!--    <a th:href="@{/admin/panel/add-view}"  style="width: 100%;" class="btn btn-primary mb-3">Add ebook</a>-->
+    <!--    <a th:href="@{/admin/panel/add-view}"  style="width: 100%;" class="btn btn-primary mb-3">Add ebook</a>-->
 
-  <!--    <a th:href=""  style="width: 100%;" class="btn btn-primary mb-3">Show recent purchases</a>-->
+    <!--    <a th:href=""  style="width: 100%;" class="btn btn-primary mb-3">Show recent purchases</a>-->
 </div>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
